# adlist_generator

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test.yml
configs.example/: adlists_sources.yml  local_dns.yml  server_config.yml
src/: main.py  parsers.py  reporter.py  schemas.py  trie.py  writer.py
tests/: test_adlist_schema.py  test_attribution.py  test_parsers.py  test_schemas.py  test_trie.py  test_writer.py
